# copy_benchmark

./: CMakeLists.txt  CMakePresets.json
benchmark/: BM_copy.hpp  CMakeLists.txt  copy_benchmark.cpp  copy_benchmark.cpp.in  copy_benchmark.hpp  copy_n_copier_benchmark.cpp  for_loop_copier_benchmark.cpp  memcpy_copier_benchmark.cpp  warmup_copier.hpp  warmup_copier_benchmark.cpp
include/: CMakeLists.txt  copy_n_copier.hpp  for_loop_copier.hpp  instantiate_copiers.hpp  memcpy_copier.hpp  warmup_copier.hpp
scripts/: plot_benchmark.py  run_benchmark.sh
src/: CMakeLists.txt  copier.hpp.in  copy_n_copier.cpp.in  copy_n_restrict_copier.cpp.in  for_loop_copier.cpp.in  for_loop_restrict_copier.cpp.in  memcpy_copier.cpp.in  memcpy_restrict_copier.cpp.in  restrict_copier.hpp.in
